# base

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md  lakefile.lean
algorithms/: lake-manifest.json  lakefile.lean
algorithms/lean/: CsvBenchAlgorithm.lean  GpuIterBenchAlgorithm.lean  GpuVecAddBenchAlgorithm.lean  HistogramBench1Algorithm.lean  HistogramBench4Algorithm.lean  JsonBenchAlgorithm.lean  MatmulAlgorithm.lean  MatmulBenchAlgorithm.lean  RaytraceAlgorithm.lean  RegexBenchAlgorithm.lean  SaxpyBenchAlgorithm.lean  SceneAlgorithm.lean  SortBenchAlgorithm.lean
applications/blackhole/: Cargo.toml  build.rs
applications/blackhole/src/: main.rs
applications/blackhole/tests/: smoke.rs
applications/cli/: Cargo.toml  build.rs  lake-manifest.json  lakefile.lean
applications/cli/lean/: MakeAlgorithm.lean
applications/cli/src/: main.rs
applications/cli/tests/: comparison.rs
applications/compress/: Cargo.toml  build.rs  lake-manifest.json  lakefile.lean
applications/compress/lean/: MakeAlgorithm.lean
applications/csv/: Cargo.toml  build.rs  lake-manifest.json  lakefile.lean
applications/draw/: Cargo.toml  build.rs  lake-manifest.json  lakefile.lean
applications/draw/lean/: MakeAlgorithm.lean
applications/draw/src/: main.rs
applications/draw/tests/: smoke.rs
applications/fft/: Cargo.toml  build.rs  lake-manifest.json  lakefile.lean
applications/lean4-evaluator/: Cargo.toml  build.rs  lake-manifest.json  lakefile.lean
applications/lean4-evaluator/lean/: LeanEval.lean
applications/lean4-evaluator/src/: argv.rs  main.rs
applications/lean4-evaluator/tests/: comparison.rs
applications/matmul/: Cargo.toml  build.rs  lake-manifest.json  lakefile.lean
applications/qwen2/: Cargo.toml  build.rs
applications/raymarch-demo/: Cargo.toml  build.rs
applications/raytrace/: Cargo.toml  build.rs  lake-manifest.json  lakefile.lean
applications/sand-demo/: Cargo.toml  build.rs
applications/sat/: Cargo.toml  build.rs  lake-manifest.json  lakefile.lean
applications/sat/lean/: MakeAlgorithm.lean
applications/sat/src/: main.rs
applications/sat/tests/: comparison.rs
applications/sat/tests/cnf/: sat_20vars.cnf  sat_3vars.cnf  sat_50vars.cnf  sat_backtrack_10vars.cnf  sat_backtrack_deep.cnf  sat_medium.cnf  sat_mixed_widths.cnf  sat_pure_literal.cnf  sat_simple.cnf  sat_tautological.cnf  sat_trivial.cnf  sat_unique.cnf  sat_unit.cnf  sat_unit_chain_long.cnf  sat_wide_clauses.cnf  unsat_3vars.cnf  unsat_empty_clause.cnf  unsat_php_extended.cnf  unsat_pigeon_3_2.cnf  unsat_pigeon_4_3.cnf  unsat_pigeon_5_4.cnf  unsat_resolution.cnf  unsat_triangle_coloring.cnf  unsat_trivial.cnf  unsat_unit_chain.cnf
applications/scene/: Cargo.toml  build.rs  lake-manifest.json  lakefile.lean
applications/sha256/: Cargo.toml  build.rs  lake-manifest.json  lakefile.lean
applications/window-demo/: Cargo.toml  build.rs
applications/window-demo/src/: main.rs
applications/window-demo/tests/: logic.rs  smoke.rs
base/: Cargo.toml  build.rs
base-types/: Cargo.toml
base-types/src/: lib.rs
base/src/: coordination.rs  jit.rs  lib.rs  main.rs  units.rs  validation.rs
base/src/ffi/: cuda.rs  file.rs  ht.rs  lmdb.rs  mod.rs  net.rs  stdio.rs  thread.rs  wgpu.rs  window.rs
base/tests/: integration.rs
benchmarks/: Cargo.toml  build.rs  lake-manifest.json  lakefile.lean  run.sh
benchmarks/lean/: CsvBenchAlgorithm.lean  CudaSaxpyBenchAlgorithm.lean  GpuMatMulBenchAlgorithm.lean  GpuReductionBenchAlgorithm.lean  JsonBenchAlgorithm.lean  ReductionBenchAlgorithm.lean  RegexBenchAlgorithm.lean  SaxpyBenchAlgorithm.lean  StringSearchAlgorithm.lean  VecOpsBenchAlgorithm.lean  WordCountAlgorithm.lean
benchmarks/python/: bench.py  csv_sum.py  json_bench.py  regex_bench.py  sort_bench.py  string_search.py  wordcount.py
benchmarks/python/benches/: csv_bench.py  json_bench.py  pandas_bench.py  regex_bench.py  strsearch_bench.py  torchops_bench.py  vecops_bench.py  vllm_bench.py  wordcount_bench.py
benchmarks/src/: csv_bench.rs  cuda_bench.rs  dispatch_bench.rs  dynamic_bench.rs  gpu_bench.rs  gpu_iter_bench.rs  harness.rs  histogram_bench.rs  json_bench.rs  main.rs  matmul_bench.rs  memory_bench.rs  network_bench.rs  reduction_bench.rs  regex_bench.rs  sort_bench.rs  string_search_bench.rs  vecops_bench.rs  wordcount_bench.rs
build-support/: Cargo.toml
build-support/src/: lib.rs
lean/: AlgorithmLib.lean  MakeAlgorithm.lean  lake-manifest.json  lakefile.lean
lean/algorithms/: BlackHoleAlgorithm.lean  ClampSumBenchAlgorithm.lean  CliAlgorithm.lean  CompressAlgorithm.lean  CsvAlgorithm.lean  CsvBenchAlgorithm.lean  CudaDecodeAttentionAlgorithm.lean  CudaDecoderLayerAlgorithm.lean  CudaGemvPersistAlgorithm.lean  CudaRmsNormPersistAlgorithm.lean  CudaSaxpyBenchAlgorithm.lean  CudaSaxpyPersistAlgorithm.lean  CudaSoftmaxPersistAlgorithm.lean  CudaVecAddPersistAlgorithm.lean  DrawAlgorithm.lean  FallingSandAlgorithm.lean  FftAlgorithm.lean  GpuIterBenchAlgorithm.lean  GpuMatMulBenchAlgorithm.lean  GpuReductionBenchAlgorithm.lean  GpuVecAddBenchAlgorithm.lean  HistogramBench1Algorithm.lean  HistogramBench4Algorithm.lean  JsonBenchAlgorithm.lean  LeanEvalAlgorithm.lean  MatmulAlgorithm.lean  MatmulBenchAlgorithm.lean  PandasBenchAlgorithm.lean  PandasFilterBenchAlgorithm.lean  PythonBenchmarks.lean  Qwen2Algorithm.lean  Qwen2Common.lean  Qwen2OnDiskAlgorithm.lean  RaymarchDemoAlgorithm.lean  RaytraceAlgorithm.lean  ReductionBenchAlgorithm.lean  RegexBenchAlgorithm.lean  RowAffineReduceBenchAlgorithm.lean  RowDotBenchAlgorithm.lean  RustBenchmarks.lean  (+11 more)
lean/lib/: AlgorithmLib.lean  lake-manifest.json
paper/: Makefile  main.aux  main.out  main.tex
py-base/: .gitignore  Cargo.toml  README.md  pyproject.toml
py-base/benchmarks/: bench.py  generate_algos.sh  harness.py  run.sh
py-base/benchmarks/benches/: json_bench.py  pandas_bench.py  torchops_bench.py  vecops_bench.py  vllm_bench.py
py-base/src/: lib.rs
py-base/tests/: python_tests.rs  test_base.py
src/: lib.rs  main.rs  types.rs  units.rs  validation.rs
tools/: qwen2_convert.py
(+39 files in other folders)
