[workspace]
members = ["base-types", "build-support", "base", "py-base", "benchmarks", "applications/draw", "applications/raytrace", "applications/scene", "applications/compress", "applications/csv", "applications/lean4-evaluator", "applications/sat", "applications/sha256", "applications/fft", "applications/matmul", "applications/cli"]
resolver = "2"
