[package]
name = "base"
version = "0.1.0"
edition = "2021"

[dependencies]
base-types = { path = "../base-types" }
wgpu = "0.20"
portable-atomic = "1"
quanta = "0.12"
pollster = "0.3"
rand = "0.8"
tracing = { version = "0.1", features = ["release_max_level_off"] }
lmdb-zero = "0.4"
liblmdb-sys = "0.2"
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-jit = "0.116"
cranelift-module = "0.116"
cranelift-reader = "0.116"
cranelift-native = "0.116"
arrow-array = { version = "54", default-features = false }
arrow-schema = { version = "54", default-features = false }

[dev-dependencies]
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
arrow-array = { version = "54", default-features = false }
arrow-schema = { version = "54", default-features = false }

[lib]
name = "base"
path = "src/lib.rs"
