[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../base" }
base-types = { path = "../base-types" }
bincode = "1"
tracing = { version = "0.1", features = ["release_max_level_off"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
crossbeam-channel = "0.5"
rayon = "1"
burn = { version = "0.16", default-features = false, features = ["ndarray", "wgpu", "cuda-jit", "std"] }
pollster = "0.4"
wgpu = "23"
tokio = { version = "1", features = ["fs", "rt", "rt-multi-thread", "sync", "net", "io-util"] }

[build-dependencies]
build-support = { path = "../build-support" }

[[bin]]
name = "benchmarks"
path = "src/main.rs"
