[package]
name = "py-base"
version = "0.1.0"
edition = "2021"

[lib]
name = "py_base"
crate-type = ["cdylib"]

[dependencies]
base = { path = "../base" }
base-types = { path = "../base-types" }
pyo3 = { version = "0.22", features = ["extension-module"] }
serde_json = "1"
arrow-array = { version = "54", default-features = false, features = ["ffi"] }
arrow-schema = { version = "54", default-features = false, features = ["ffi"] }
arrow-data = { version = "54", default-features = false, features = ["ffi"] }
