[package]
name = "lean4-evaluator"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../../base" }
base-types = { path = "../../base-types" }
bincode = "1"

[build-dependencies]
base-types = { path = "../../base-types" }
serde_json = "1"
bincode = "1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "lean4-eval"
path = "src/main.rs"
